# C-project

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.1deebdd  Data.cpp  README  Vector.cpp  Vector.h  custom_split.cpp  custom_split.h  different_quantity.ui  errors.cpp  k-nearest-neighbors.cpp  lineral regression.cpp  lineral-regression-test.cpp  lineral-regression.cpp  lineral-regression.h  main.cpp  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.h  mainwindow.ui  quadratic-regression.cpp  quadratic-regression.h  regression.cpp  regression.h  resource.qrc  ridge-regression.cpp  secdialog.ui  vector.pb.cc  vector.pb.h  vector.proto  widget.cpp  widget.h  widget.ui  wrong_input.cpp  wrong_input.h  wrong_input.ui
error/: errors.cpp
view/: CMakeLists.txt  CMakeLists.txt.user.1281129  Data.h  README  errors.cpp  errors.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  secdialog.ui  wrong_input.cpp  wrong_input.h  wrong_input.ui
